--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="icon" href="%PUBLIC_URL%/iconlogo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Progress Bars</title>
 </head>
